- some jpeg.c logging calls didn't include parameters enough to match
  the supplied format string. (detected by valgrind)
- in some cases memory wasn't being freed during error handling when
  reading jpeg images (detected by valgrind)
- free the TIFF object correctly when reading a TIFF image and the 
  page number is out of range. (detected by valgrind)
- i_gsampf() (used to implement getsamples() for floating point samples)
  was leaking memory. (detected by valgrind)
- writing to a PNG file was leaking one memory block
  (detected by valgrind)
- some error paths when reading GIF images weren't closing the GIF
  read object. (detected by valgrind)
- bump to 0.49 (to get #17981 fix out)

0.49_01 Tue 28 Mar 2006
This is a test release specifically to fix #18397
- correct warning in png.c from passing wrong pointer type to 
  png_destroy_write_struct on line 173.
  fixes # 18051
- Skip Inline tests when we're in a directory containing spaces in the
  path, since Inline itself errors out when used in such a directory.
  fixes # 18049
- CRITICAL: writing a 2 or 4 channel image to jpeg or a 2 channel
  image to tga, where the output was a buffer chain would produce a
  segmentation fault during error handling and recovery.
  fixes # 18397
- bump to 0.49_01 for test release

0.50 Wed 29 Mar 2006
This is a release specifically to fix #18397
- See also: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=359661
- fix confirmed by reporter.
- bump to 0.50 for release

0.51
- backport fix for #18496 from dev tree:
  fix range checking on IFD entry data types.  This could cause various 
  crashes.
- backport fix for #18712 from dev tree:
  Specifying the bottom edge of the source image to paste was broken in
  a couple of different ways.
  

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
