@@ -208,6 +208,8 @@ t/t90cc.t
 t/t91pod.t		Test POD with Test::Pod
 t/t92samples.t
 t/testtools.pl
+t/tr18561.t		Regression tests
+t/tr18561b.t
 tags.c
 testimg/209_yonge.jpg	Regression test: #17981
 testimg/bad1oflow.bmp   1-bit/pixel, overflow integer on 32-bit machines
